--- a/banana.html
+++ b/banana.html
@@ -1,3 +1,7 @@
 <link rel="stylesheet" href="banana.css">
 <div class='box'>
-  <h3>Banana🍌</h3></div>
+  <h3>Banana🍌</h3>
+</div>
+<div class='box'>
+  <h3>Banana🍌</h3>
+</div>
