--- a/banana.html
+++ b/banana.html
@@ -1,8 +1,11 @@
 <link rel="stylesheet" href="banana.css">
-<div class='box'>
+<div class='banana'>
   <h3>Banana🍌</h3>
 </div>
-<div class='box'>
+<div class='apple'>
   <h3>Apple🍎</h3>
+</div>
+<div class='chocolate'>
+  <h3>chocolate🍫</h3>
 </div>
 
